compiler/testData/diagnostics/tests/lateinit/NoInapplicableLateinitModifierForPropertyWithUnnresolvedType.kt
// RUN_PIPELINE_TILL: FRONTEND
// ISSUE: KT-51624

lateinit var x: <!UNRESOLVED_REFERENCE!>UnresolvedType<!>

/* GENERATED_FIR_TAGS: lateinit, propertyDeclaration */
